[package]
name = "libtqsm"
version = "0.6.1"
description = "Sentence segmenter that supports ~300 languages"
license = "MIT"
repository = "https://github.com/mush42/tqsm"
documentation = "https://github.com/mush42/tqsm"
keywords = [ "nlp", "tokenization", "text" , "ml"]
categories = [ "algorithms", "science" ]
authors = ["Musharraf Omer <ibnomer2011@hotmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.79"
fancy-regex = "0.11.0"
once_cell = "1.18.0"
regex = "1.10.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.89"
unicode-segmentation = "1.10.1"

