[package]
name = "pytqsm"
version = "0.6.1"
description = "Sentence segmenter that supports ~300 languages"
license = "MIT"
repository = "https://github.com/mush42/tqsm"
documentation = "https://github.com/mush42/tqsm"
keywords = [ "nlp", "tokenization", "text" , "ml"]
categories = [ "algorithms", "science" ]
authors = ["Musharraf Omer <ibnomer2011@hotmail.com>"]
edition = "2021"

[lib]
name = "pytqsm"
crate-type = ["cdylib"]

[dependencies]
libtqsm = { path="../libtqsm" }
pyo3 = "0.19.0"
