[package]
name = "tqsm"
version = "0.6.1"
description = "Sentence segmenter that supports ~300 languages"
license = "MIT"
repository = "https://github.com/mush42/tqsm"
documentation = "https://github.com/mush42/tqsm"
keywords = [ "nlp", "tokenization", "text" , "ml"]
categories = [ "algorithms", "science" ]
authors = ["Musharraf Omer <ibnomer2011@hotmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
libtqsm = { path = "../libtqsm" }
